HOCS-3905 FOI creation - Need to correct alignment of 'Confirm' link in Check your answers screen (#775)
* Add space between last review field and button

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -863,6 +863,10 @@ $border-colour: govuk-colour("mid-grey");
   align-items: center;
 }
 
+.review-field:last-of-type {
+  margin-bottom: 30px;
+}
+
 .review-field-row:last-of-type {
   border-bottom: 1px solid #b1b4b6;
 }
